2006-10-13  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (HANDLE_EXTENSION_BUILTIN): New constant.
	(handleExtensionDecl): New static.
	(walkApplyExp): Handle HANDLE_EXTENSION_BUILTIN.
	(checkPragma): New method.
	* XQParser.java (parseMaybePrimaryExpr): Re-do handling of
	PRAGMA_START_TOKEN.  Use handleExtensionDecl.  Check errors.

2006-10-12  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkApplyExp): Fix typo.

	* XQResolveNames.java (NUMBER_BUILTIN): New constant.
	(<init>): Push number function.
	(walkApplyExp): Handle fn:number.
	* XQuery.java (initXQuery): No number declare fn:number here.

2006-10-07  Per Bothner  <per@bothner.com>

	* XQuery.java (initXQuery): Declare fn:insert-before, fn:tokenize,
	and fn:resolve-QName.

2006-09-30  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (MIN_BUILTIN, MAX_BUILTIN): New constants.
	(<init>): Declare new builtins.
	(walkApplyExp): Handle new builtins.
	* XQuery.java (initXQuery): No longer declare fn:min and fn:max here.

	* XQParser.java (parseNameSpec): Use parseNameTest so we get correct
	namespace-resolution.  And then inline into single caller,
	parseMaybePrimaryExpr.

	* XQParser.java (parseXMLConstructor): Check for correct syntax,
	specifically whitespace, of direct processing-instruction constructor.

	* XQParser.java (parseCount, commentCount): New fields.
	(skipComment): Increment commentCount.
	(parse): Increment parseCount.
	Warn/error if stuff before XQUERY_VERSION_TOKEN.
	* XQuery.java (parse): Error if we saw an empty module.

	* XQuery.java (parse): Don't PARSE_ONE_LINE if reading from a file.

	* XQParser.java (parse): Fix thinko in logic for checking encoding
	specification 'xquery version' declaration.

	* XQParser.java (parseExprSequence): New parameter 'optional'.
	Error if empty body and optional is false.
	(parseStepQualifiers, parseParenExpr,
	parseMaybePrimaryExpr): Update callers.
	(parseStepQualifiers): Error if unexpected EOF_TOKEN.
