@@ -1,3 +1,8 @@
+2006-10-15  Per Bothner  <per@bothner.com>
+
+	* XQuery.java (SCHEMA_INSTANCE_NAMESPACE): New URI, for xsi.
+	(XQUERY_FUNCTION_NAMESPACE, LOCAL_NAMESPACE): Update URIs.
+
 2006-10-13  Per Bothner  <per@bothner.com>
 
 	* XQResolveNames.java (HANDLE_EXTENSION_BUILTIN): New constant.
